# otawa-riscv

./: CMakeLists.txt  README.md  elf_243.eld  otawa_delayed.tpl  otawa_kind.nmp  otawa_read.tpl  otawa_target.nmp  otawa_uregs.nmp  otawa_write.tpl  riscv.cpp  riscv.eld
